--- a/src/Acme/BonitaBundle/Resources/config/routing/siniestro.yml
+++ b/src/Acme/BonitaBundle/Resources/config/routing/siniestro.yml
@@ -6,3 +6,8 @@ siniestro_crear:
     pattern:  /crear
     defaults: { _controller: "AcmeBonitaBundle:Siniestro:crearSiniestro" }
     requirements: { _method: post }
+
+siniestros:
+    pattern:  /misSiniestros
+    defaults: { _controller: "AcmeBonitaBundle:Siniestro:indexSiniestros" }
+    requirements: { _method: get }
